force-app/main/default/objects/Order/fields/Account_Accpac_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Accpac_Number__c</fullName>
    <formula>Account.AccPac_Account__c</formula>
    <label>Account Accpac Number</label>
    <type>Text</type>
</CustomField>