force-app/main/default/objects/Order/fields/Accpac_Delivery_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Accpac_Delivery_Order_Number__c</fullName>
    <label>Accpac Delivery Order Number</label>
    <type>TextArea</type>
</CustomField>