force-app/main/default/objects/Order/fields/Active_Order_Items__c.field-meta.xml
<CustomField>
    <fullName>Active_Order_Items__c</fullName>
    <label>Active Order Items</label>
    <summaryFilterItems>
        <field>OrderItem.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>