force-app/main/default/objects/Order/fields/Billing_Suite_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Suite_Number__c</fullName>
    <label>Billing Suite Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>