force-app/main/default/objects/Order/fields/Cached_Active_Order_Items_Count__c.field-meta.xml
<CustomField>
    <fullName>Cached_Active_Order_Items_Count__c</fullName>
    <label>Cached Active Order Items Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>