force-app/main/default/objects/Order/fields/Cached_Total_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Cached_Total_Monthly_Revenue__c</fullName>
    <label>Cached Total Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>