force-app/main/default/objects/Order/fields/Cached_Total_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Cached_Total_Purchase_Price__c</fullName>
    <label>Cached Total Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>