force-app/main/default/objects/Order/fields/Cancelled_By__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancelled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>