force-app/main/default/objects/Order/fields/Control_Invoice_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Control_Invoice_Ticket__c</fullName>
    <description>Controls generation of Invoice Ticket - Can be used for other purposes if required</description>
    <label>Control Invoice Ticket</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>