force-app/main/default/objects/Order/fields/CPQ2_Include_in_Price_Model__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Include_in_Price_Model__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Price Model</label>
    <type>Checkbox</type>
</CustomField>