force-app/main/default/objects/Order/fields/CPQ2_Last_Active_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Last_Active_Check_Date__c</fullName>
    <label>Last Active Check Date</label>
    <type>DateTime</type>
</CustomField>