force-app/main/default/objects/Order/fields/CPQ2_Seasonal__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Seasonal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seasonal</label>
    <type>Checkbox</type>
</CustomField>