force-app/main/default/objects/Order/fields/CPQ2_TAC__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_TAC__c</fullName>
    <description>Used for calculating Ship To Score</description>
    <label>Total Annual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>