force-app/main/default/objects/Order/fields/Credit_Card_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Authorization__c</fullName>
    <label>Credit Card Authorization</label>
    <length>128</length>
    <type>Text</type>
</CustomField>