force-app/main/default/objects/Order/fields/Do_Not_Send_To_Old_Integration__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_To_Old_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added to the Where clause of the Order and Order Product extractions to filter out orders that the integration does not need to see again.</description>
    <inlineHelpText>Added to the Where clause of the Order and Order Product extractions to filter out orders that the integration does not need to see again.</inlineHelpText>
    <label>Do Not Send To Old Integration</label>
    <type>Checkbox</type>
</CustomField>