force-app/main/default/objects/Order/fields/Estimated_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Order_Amount__c</fullName>
    <formula>Estimated_Order_Subtotal__c + Estimated_Taxes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Order amount including estimated taxes may differ from ERP generated taxes</inlineHelpText>
    <label>Estimated Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>