force-app/main/default/objects/Order/fields/Estimated_Order_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Order_Subtotal__c</fullName>
    <inlineHelpText>Subtotal of active order products</inlineHelpText>
    <label>Estimated Order Subtotal</label>
    <summarizedField>OrderItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>