force-app/main/default/objects/Order/fields/HasBeenDeactivated__c.field-meta.xml
<CustomField>
    <fullName>HasBeenDeactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasBeenDeactivated</label>
    <type>Checkbox</type>
</CustomField>