force-app/main/default/objects/Order/fields/HasNonConsumables__c.field-meta.xml
<CustomField>
    <fullName>HasNonConsumables__c</fullName>
    <formula>IF( NonConsumableCount__c &gt; 0, TRUE , FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HasNonConsumables</label>
    <type>Checkbox</type>
</CustomField>