force-app/main/default/objects/Order/fields/Invoice_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Description__c</fullName>
    <inlineHelpText>Max 250 chars</inlineHelpText>
    <label>Invoice Description</label>
    <type>TextArea</type>
</CustomField>