force-app/main/default/objects/Order/fields/Is_Complete_Shipment_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Complete_Shipment_Required__c</fullName>
    <formula>IF(Account.Ship_Complete__c = false,

&quot;No&quot;,

IMAGE ( &quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;) + &quot;Yes&quot; + IMAGE ( &quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;))</formula>
    <label>Is Complete Shipment Required</label>
    <type>Text</type>
</CustomField>