force-app/main/default/objects/Order/fields/Is_PO_Provided_by_Customer_After__c.field-meta.xml
<CustomField>
    <fullName>Is_PO_Provided_by_Customer_After__c</fullName>
    <formula>OR ( 
AND ( 
ISPICKVAL(Account.PO_Required_for_Orders__c, &quot;PO Required After&quot;), 
Account.PO_Required_on_Line_Item__c = false, 
NOT(ISBLANK(PoNumber)) 
), 
AND ( 
ISPICKVAL(Account.PO_Required_for_Orders__c, &quot;PO Required After&quot;), 
Account.PO_Required_on_Line_Item__c, 
Number_of_Order_Products_without_PO__c = 0 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is PO Provided by Customer (After)</label>
    <type>Checkbox</type>
</CustomField>