force-app/main/default/objects/Order/fields/IsRelatedContact__c.field-meta.xml
<CustomField>
    <fullName>IsRelatedContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRelatedContact</label>
    <type>Checkbox</type>
</CustomField>