force-app/main/default/objects/Order/fields/isValid__c.field-meta.xml
<CustomField>
    <fullName>isValid__c</fullName>
    <formula>(EffectiveDate &lt;= (Today() +  $Setup.Field_Service_Settings__c.Work_Orders_In_Advance__c )) &amp;&amp; ISPICKVAL(Status, &quot;Activated&quot;) &amp;&amp;  (EndDate &gt; Today() || ISBLANK(EndDate))</formula>
    <label>isValid</label>
    <type>Checkbox</type>
</CustomField>