force-app/main/default/objects/Order/fields/Last_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Number__c</fullName>
    <label>Last Invoice Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>