force-app/main/default/objects/Order/fields/LastDeactivatedDate__c.field-meta.xml
<CustomField>
    <fullName>LastDeactivatedDate__c</fullName>
    <description>Date when the order was previously deactivated</description>
    <label>Last Deactivated Date</label>
    <type>DateTime</type>
</CustomField>