force-app/main/default/objects/Order/fields/Next_Appointment_Date_Max__c.field-meta.xml
<CustomField>
    <fullName>Next_Appointment_Date_Max__c</fullName>
    <label>Next Appointment Date(Max)</label>
    <summarizedField>OrderItem.Next_Service_Date__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Frequency__c</field>
        <operation>notEqual</operation>
        <value>One-Off</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>