force-app/main/default/objects/Order/fields/NonConsumableCount__c.field-meta.xml
<CustomField>
    <fullName>NonConsumableCount__c</fullName>
    <label>NonConsumableCount</label>
    <summaryFilterItems>
        <field>OrderItem.Product_Type__c</field>
        <operation>notEqual</operation>
        <value>Consumables</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>