force-app/main/default/objects/Order/fields/Number_of_Order_Products_without_PO__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Order_Products_without_PO__c</fullName>
    <label>Number of Order Products without PO</label>
    <summaryFilterItems>
        <field>OrderItem.PO_Number__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>