force-app/main/default/objects/Order/fields/Operations_Post_Installation_Check__c.field-meta.xml
<CustomField>
    <fullName>Operations_Post_Installation_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Business user to manually flag an order after installation</description>
    <inlineHelpText>Business user to manually flag an order after installation</inlineHelpText>
    <label>Operations Post Installation Check</label>
    <type>Checkbox</type>
</CustomField>