force-app/main/default/objects/Order/fields/Order_Merge_Job_Message__c.field-meta.xml
<CustomField>
    <fullName>Order_Merge_Job_Message__c</fullName>
    <description>Used by the Order Merge batch job.</description>
    <inlineHelpText>Used by the Order Merge batch job.</inlineHelpText>
    <label>Order Merge Job Message</label>
    <type>TextArea</type>
</CustomField>