force-app/main/default/objects/Order/fields/Order_Merge_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Merge_Job_Status__c</fullName>
    <description>Used by the Order Merge batch job. Set the value to ‘To be Processed’ to have the batch job pick this record up.</description>
    <inlineHelpText>Used by the Order Merge batch job. Set the value to ‘To be Processed’ to have the batch job pick this record up.</inlineHelpText>
    <label>Order Merge Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be Processed</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Ready for Work Order Reparenting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>