force-app/main/default/objects/Order/fields/Order_Owner_IsActive__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner_IsActive__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order: Owner IsActive</label>
    <type>Checkbox</type>
</CustomField>