force-app/main/default/objects/Order/fields/Order_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Order_Pricebook__c</fullName>
    <formula>Pricebook2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Pricebook</label>
    <type>Text</type>
</CustomField>