force-app/main/default/objects/Order/fields/Override_Account_Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>Override_Account_Operating_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Account Operating Hours</label>
    <type>Checkbox</type>
</CustomField>