force-app/main/default/objects/Order/fields/Owner_Accpac_Rep_Number__c.field-meta.xml
<CustomField>
    <fullName>Owner_Accpac_Rep_Number__c</fullName>
    <formula>Owner:User.AccPac_Rep_Number__c</formula>
    <label>Owner Accpac Rep Number</label>
    <type>Text</type>
</CustomField>