force-app/main/default/objects/Order/fields/Pest_Emergency_Not_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Pest_Emergency_Not_Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pest Emergency - Not Invoicing</label>
    <type>Checkbox</type>
</CustomField>