force-app/main/default/objects/Order/fields/Prevent_Invoice_Change_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Invoice_Change_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to prevent the Invoice Change Ticket from being created</description>
    <inlineHelpText>Used to prevent the Invoice Change Ticket from being created</inlineHelpText>
    <label>Prevent Invoice Change Ticket</label>
    <type>Checkbox</type>
</CustomField>