force-app/main/default/objects/Order/fields/Product_Categories__c.field-meta.xml
<CustomField>
    <fullName>Product_Categories__c</fullName>
    <label>Product Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>