force-app/main/default/objects/Order/fields/Recurring_Lines__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Lines__c</fullName>
    <description>Number of active Order Products with a frequency more than one-time.</description>
    <label>Recurring Lines</label>
    <summaryFilterItems>
        <field>OrderItem.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.Frequency__c</field>
        <operation>notEqual</operation>
        <value>One-Time</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>