force-app/main/default/objects/Order/fields/ScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDate__c</fullName>
    <description>Maximum of Scheduled Date rolled up from Order Products</description>
    <label>ScheduledDate</label>
    <summarizedField>OrderItem.Next_Scheduled_Date__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>