force-app/main/default/objects/Order/fields/Season_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Season_End_Date__c</fullName>
    <formula>IF(
DATE(YEAR(TODAY()),  SeasonEndMonthValue__c ,  SeasonEndDayValue__c ) &lt;=   Season_Start_Date__c ,
DATE(YEAR(TODAY())+1, SeasonEndMonthValue__c, SeasonEndDayValue__c ),
DATE(YEAR(TODAY()), SeasonEndMonthValue__c, SeasonEndDayValue__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Season End Date</label>
    <type>Date</type>
</CustomField>