force-app/main/default/objects/Order/fields/Season_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Season_Start_Date__c</fullName>
    <formula>IF(  SeasonStartMonthValue__c  &gt; MONTH( TODAY() )  &amp;&amp;    SeasonEndMonthValue__c  &gt;= MONTH( TODAY() )  &amp;&amp; (SeasonEndMonthValue__c &lt; SeasonStartMonthValue__c || (SeasonEndMonthValue__c = SeasonStartMonthValue__c &amp;&amp; SeasonStartDayValue__c &gt; SeasonEndDayValue__c)
), DATE(YEAR(TODAY())-1, SeasonStartMonthValue__c,  SeasonStartDayValue__c ), DATE(YEAR(TODAY()), SeasonStartMonthValue__c, SeasonStartDayValue__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Season Start Date</label>
    <type>Date</type>
</CustomField>