force-app/main/default/objects/Order/fields/SeasonEndDayValue__c.field-meta.xml
<CustomField>
    <fullName>SeasonEndDayValue__c</fullName>
    <label>SeasonEndDayValue</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>