force-app/main/default/objects/Order/fields/SeasonEndMonthValue__c.field-meta.xml
<CustomField>
    <fullName>SeasonEndMonthValue__c</fullName>
    <label>SeasonEndMonthValue</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>