force-app/main/default/objects/Order/fields/SeasonStartDayValue__c.field-meta.xml
<CustomField>
    <fullName>SeasonStartDayValue__c</fullName>
    <label>SeasonStartDayValue</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>