force-app/main/default/objects/Order/fields/SeasonStartMonthValue__c.field-meta.xml
<CustomField>
    <fullName>SeasonStartMonthValue__c</fullName>
    <label>SeasonStartMonthValue</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>