force-app/main/default/objects/Order/fields/Send_Post_Installation_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Post_Installation_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers a Workflow to send email alert to Order Ship To Contact&apos;s email when set to True.</description>
    <label>Send Post Installation Survey</label>
    <type>Checkbox</type>
</CustomField>