force-app/main/default/objects/Order/fields/SendToSage__c.field-meta.xml
<CustomField>
    <fullName>SendToSage__c</fullName>
    <formula>/*Account and Parent Account must be active*/
Account.Inactive__c == false &amp;&amp;
Account.Parent.Inactive__c == false &amp;&amp; 

/*if territory is specified at order level, see if it is included in the integration else check the account territory*/
(IF( ISBLANK(Service_Territory__c), Account.Service_Territory__r.Include_In_Integration__c , Service_Territory__r.Include_In_Integration__c )) &amp;&amp;

/*no zero dollar emergency orders*/
(NOT(AND(Emergency__c == true, TotalAmount == 0))) &amp;&amp; 

/* no pest special emergencies that are not completed - 21618 */ 
NOT(Pest_Emergency_Not_Invoicing__c) &amp;&amp; 

(
LastModifiedDate &gt;= Upsert_Date__c || 
ActivatedDate &gt;= Upsert_Date__c || 
ISBLANK(Upsert_Date__c) || Inventory_Consumed__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SendToSage</label>
    <type>Checkbox</type>
</CustomField>