force-app/main/default/objects/Order/fields/Service_Appointment_Scheduled_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Scheduled_Start_Time__c</fullName>
    <label>Service Appointment Scheduled Start Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>